# alm

./: .gitignore  README.md  STEERING.md  environment.yml  pyproject.toml
scripts/: build_atomtxt_pairs.py  build_balanced_dir_pairs.py  build_csp_backbone_cache.py  build_doping_pairs.py  build_id_indices.py  build_llm4mat_pairs.py  build_ood_pairs.py  build_polymorph_pairs.py  build_stage3a_pairs.py  build_stage3b_csp_pairs.py  cache_embeddings_atomistic.py  cache_embeddings_atomistic_orbv3.py  cache_embeddings_llm.py  cache_embeddings_narratives_orbv3.py  cache_structure_energies.py  calibrate_physical_priors.py  csv_to_ase.py  dir_label_energy_gate.py  fetch_mp_hull.py  flatten_cached_embs.py  generate_application_prompts.py  generate_ood_templates.py  matterchat_pkl_to_ase.py  precompute_mp20_spacegroups.py  preprocess_text_datasets.py
src/alm/: __init__.py  _alm_bootstrap.py  aux_heads.py  bridge.py  direction_code.py  model.py  paths.py  samplers.py
src/alm/eval/: README.md  __init__.py
src/alm/eval/eval_prompts/: id_prompt_targets.json  mp20_prior_bounds.json
src/alm/eval/generation/: compute_csp_rmse.py  csp_recovery.py  eval_almbench.py  eval_app_consistency.py  eval_atomtxt_direction.py  eval_bridge_csp.py  eval_csp.py  eval_dng.py  eval_doping.py  eval_edit.py  eval_planner_csp.py  eval_polymorph.py  gen_dng_bridge.py  gen_dng_native.py  rerank_csp.py  score_dng_hull.py
src/alm/eval/lib/: baselines.py  fk_rewards.py  llm_judge.py  loader.py  metrics.py  parsers.py  runs.py  structure_metrics.py  text_generation.py
src/alm/eval/understanding/: aggregate_results.py  eval_gnome_fe.py  eval_knowledge_retention_judge.py  eval_language_retention.py  eval_llm4mat.py  eval_mascqa.py  eval_mat2mcq.py  eval_mat2props.py  eval_matterchat.py  eval_mattext.py  eval_text_baseline.py  eval_text_conditional.py
src/alm/inference/: __init__.py  generate.py  generate_stage1.py  generate_stage2.py  generate_stage3.py
src/alm/train/: __init__.py  stage1.py  stage2.py  stage3.py
src/alm/utils/: __init__.py  composition_utils.py
